MultivalueGrid funcionando. Quando um objeto tem um MultivalueField o AbstractService converte para os campos necessários dentro do Notes.